--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -1,23 +1,31 @@
-// color 
-$color:(
+// color
+$color: (
   primary: #fff,
   secondary: #000,
 );
 
-
 // text
 $text: (
   size: (
-    xs: .875rem,
-    normal: 1rem,
-    base: 1.125rem,
-    sm: 1.25rem,
-    md: 1.5rem,
-    lg: 1.75rem,
-    xl: 2rem,
-    xxl: 2.25rem
+    xs: 0.75rem,
+    sm: 0.875rem,
+    base: 1rem,
+    lg: 1.125rem,
+    xl: 1.25rem,
+    2xl: 1.5rem,
+    3xl: 1.875rem,
+    4xl: 2.25rem,
+    5xl: 3rem,
+    6xl: 3.75rem,
+    7xl: 4.5rem,
   ),
   // spacing:(
   //   base:  0.15em,
-  // ),
+  // ),,
+);
+
+// padding
+$spacing: (
+  sm: 1.5rem,
+  lg: 2.25rem,
 );
