--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -2,12 +2,23 @@
 
 .header {
   @include flex($ai: center);
+  height: 90px;
   flex: 1 0 auto;
-  padding: 1.5rem 2rem;
+  padding-left: deep-map-get($spacing, lg);
+  padding-right: deep-map-get($spacing, lg);
+  // padding: 1.5rem 2.25rem;
+  // padding: deep-map-get($spacing, sm) deep-map-get($spacing, lg);
   background-color: black;
 
+  @include sm {
+    position: relative;
+    justify-content: space-between;
+    padding: deep-map-get($spacing, sm) deep-map-get($spacing, sm);
+  }
+
   &__logo {
-    @include text(xl);
+    @include text(3xl);
+    white-space: nowrap;
     font-weight: bold;
 
     i {
@@ -15,20 +26,72 @@
     }
   }
 
+  &__menu-btn {
+    @include button-reset();
+    display: none;
 
+    i {
+      pointer-events: none;
+    }
+
+    @include sm {
+      @include text(2xl);
+      display: block;
+      cursor: pointer;
+      color: map-get($color, primary);
+    }
+  }
 }
 
 .nav {
   @include flex($ai: center);
   flex: 1 0 auto;
-  margin-left: 1rem;
+  column-gap: 1rem;
+  margin-left: 2rem;
+
+  @include sm {
+    position: absolute;
+    top: 5.625rem;
+    z-index: 5;
+    width: calc(100% - deep-map-get($spacing, lg) * 2);
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(0, 0, 0, 0.773);
+    padding: 2rem 0;
+    row-gap: 2rem;
+    visibility: hidden;
+    opacity: 0;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition-property: visivility, opacity, transform;
+    transition-property: all;
+    transition: 200ms ease-in-out;
+  }
+  
+  &--open {
+    transform: scaleY(1);
+    visibility: visible;
+    opacity: 1;
+  }
 
   &__link {
-    @include text(base);
-    margin-left: 1rem;
+    @include text(lg);
+    font-weight: bold;
+
+    // &:not(:first-child){
+    //   margin-left: 1rem;
+    // }
+    @include sm {
+      // padding: 1rem 0;
+    }
 
     &:last-child {
       margin-left: auto;
+
+      @include sm {
+        margin-left: 0;
+      }
     }
   }
 }
