--- a/src/scss/page/_Home.scss
+++ b/src/scss/page/_Home.scss
@@ -1,6 +1,18 @@
 @use "../abstracts" as *;
 
-// @ 
+// @ carousel 套件相關組件
+// 左右箭頭
+.control-arrow{
+  @include sm {
+    display:none;
+  }
+}
+// 底部控制點
+.control-dots{
+  @include sm {
+    display:none;
+  }
+}
 
 .carousel {
   position: relative;
@@ -11,35 +23,102 @@
     position: relative;
     display: block;
     width: 100%;
-    background-color: red;
-    
+    height: calc(100vh - 90px);
+
+    > img{
+      @include sm {
+        height: calc(100vh - 90px);
+        object-fit: cover;
+        object-position: left;
+      }
+    }
+
+    @include lg {
+      max-height: none;
+    }
+
     &::before {
       content: "";
       position: absolute;
       left: 0;
       bottom: 0;
-      background-image: linear-gradient(rgba(0, 0, 0, 0), rgb(0, 0, 0));
+      background-image: linear-gradient(rgba(0, 0, 0, 0.033), rgb(0, 0, 0));
       width: 100%;
-      height: 50%;
+      height: 100%;
       z-index: 5;
     }
   }
 
-  &__info {
+  &__text {
+    @include flex($dir: column, $jc: end);
+    row-gap: 1rem;
+    column-gap: 1rem;
     position: absolute;
     left: 0;
     top: 0;
     z-index: 10;
+    height: 100%;
+    max-width: 50rem;
+    margin-left: 6rem;
+    // margin-bottom: 80px;
+    padding-bottom: 6rem;
+
+    @include lg {
+      max-width: 37.5rem;
+      margin-left: 5rem;
+    }
+
+    @include md {
+      max-width: 33.75rem;
+      margin-left: map-get($spacing, lg);
+      margin-bottom: 5rem;
+    }
+
+    @include sm {
+      margin-left: 0;
+      padding-left: map-get($spacing, sm);
+      padding-right: map-get($spacing, sm);
+    }
   }
+
 
   &__title {
-    @include text(xxl);
+    @include text(6xl);
+        
+    @include lg {
+      @include text(5xl);
+    }
   }
 
-  &__release {
+  &__info{
+    @include flex($jc: start);
+    @include text(3xl);
+    font-weight: bold;
+    
+    @include sm {
+      @include text(xl);
+    }
   }
+
+  &__release-date {
+  }
+
   &__vote {
+    margin-left: 1.5rem;
+
+    i {
+      margin-left: .5rem;
+    }
   }
+
   &__overview {
+    @include text(xl);
+    // grid-column: 1/-1;
+
+    @include sm {
+      @include text(lg);
+    }
   }
+
+  
 }
