[新增]movie-detail、movie-card

--- a/src/scss/abstracts/_mixin.scss
+++ b/src/scss/abstracts/_mixin.scss
@@ -10,6 +10,13 @@
   flex-wrap: $wrap;
 }
 
+// 檢查裝置是否支援hover，若有支援才執行此
+@mixin hover-query() {
+  @media (hover: hover) {
+    @content;
+  }
+}
+
 @mixin rounded-full{
   border-radius: 50%;
 }
