--- a/src/scss/abstracts/_break-point.scss
+++ b/src/scss/abstracts/_break-point.scss
@@ -1,10 +1,11 @@
 /* max-width */
 
 $xxl: 87.5rem;
-$xl: 80rem;
+$xl: 81.25rem;
 $lg: 64rem;
 $md: 48rem;
 $sm: 36rem;
+$xs: 28.125rem;
 
 @mixin xxl {
     @media (max-width:$xxl) {
@@ -32,6 +33,12 @@ $sm: 36rem;
 
 @mixin sm {
     @media (max-width:$sm) {
+        @content;
+    }
+}
+
+@mixin xs {
+    @media (max-width:$xs) {
         @content;
     }
 }
