--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -9,14 +9,38 @@
 
   &--lg {
     @include text(xl);
-    padding: 1rem 2rem;
+    padding: 1rem 1.75rem;
     border-radius: map-get($border-radius, base);
+
+    @include lg {
+      @include text(lg);
+      padding: 0.75rem 1.5rem;
+    }
+
+    @include md {
+      @include text(lg);
+      padding: 0.7rem 1.25rem;
+    }
+
+    @include sm {
+      @include text(sm);
+      
+    }
   }
 
   &--black {
     background-color: map-get($color, secondary);
     color: map-get($color, primary);
+    &:hover {
+      @include hover-bg-color(map-get($color, secondary));
+    }
+  }
 
+  &--transparent {
+    background-color: transparent;
+    color: map-get($color, primary);
+    border: 1px solid map-get($color, primary);
+    
     &:hover {
       @include hover-bg-color(map-get($color, secondary));
     }
