--- a/src/scss/base/_gobal-styles.scss
+++ b/src/scss/base/_gobal-styles.scss
@@ -1,4 +1,5 @@
 @use "../abstracts" as *;
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
 
 html {
     box-sizing: border-box;
@@ -25,4 +26,8 @@ a {
 
 img {
     vertical-align: middle;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Oswald', sans-serif;
 }
