--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,6 +1,6 @@
-@forward "FilmCard";
 @forward "MovieCards";
 @forward "Header";
-@forward "MovieDetail";
 @forward "btns";
 @forward "movie-swiper";
+@forward "DetailCard";
+@forward "WatchCard";
