--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -1,11 +1,3 @@
-
-// color
-$color: (
-  primary: #fff,
-  secondary: #000,
-  tertiary: red,
-);
-
 // text
 $text: (
   size: (
@@ -23,31 +15,39 @@ $text: (
   ),
   // spacing:(
   //   base:  0.15em,
-  // ),,
+  // ),,,
+);
+
+$max-width: (
+  default: 1320px,
+  xl: 1200px,
+  lg: 1024px,
+  md: 740px,
+);
+
+
+// color
+$color: (
+  primary: #fff,
+  secondary: #000,
+  tertiary: red,
 );
 
 // padding
 $spacing: (
   sm: 1.5rem,
-  lg: 2.25rem,
+  // lg: 2.25rem,
+  lg: 4rem,
 );
 
 // border-radius
-$border-radius:(
+$border-radius: (
   base: 10px,
 );
 
-
-$transition:(
+$transition: (
   150: 150ms ease-in-out,
   300: 300ms ease-in-out,
   500: 500ms ease-in-out,
   800: 800ms ease-in-out,
-);
-
-$max-width:(
-  default: 1700px,
-  xl: 1200px,
-  lg: 960px,
-  md: 740px,
 );
