--- a/src/scss/base/_gobal-styles.scss
+++ b/src/scss/base/_gobal-styles.scss
@@ -1,5 +1,5 @@
 @use "../abstracts" as *;
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap");
 
 html {
     box-sizing: border-box;
@@ -28,6 +28,11 @@ img {
     vertical-align: middle;
 }
 
-h1,h2,h3,h4,h5,h6 {
-    font-family: 'Oswald', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Oswald", sans-serif;
 }
