--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -9,22 +9,41 @@
 
   &--lg {
     @include text(xl);
-    padding: 1rem 1.75rem;
+    padding: 0.75em 1em;
     border-radius: map-get($border-radius, base);
 
     @include lg {
       @include text(lg);
-      padding: 0.75rem 1.5rem;
-    }
-
-    @include md {
-      @include text(lg);
-      padding: 0.7rem 1.25rem;
     }
 
     @include sm {
       @include text(sm);
+    }
+
+    i {
+      margin-right: 1rem;
       
+      @include sm {
+        margin-right: 0.5rem;
+      }
+    }
+  }
+
+  &--sm {
+    @include text(base);
+    padding: 0.5em .75em;
+    border-radius: map-get($border-radius, base);
+
+    @include sm {
+      @include text(sm);
+    }
+
+    i {
+      margin-right: 0.75rem;
+      
+      @include sm {
+        margin-right: 0.5rem;
+      }
     }
   }
 
