--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -137,6 +137,11 @@
         margin-left: 1rem;
       }
     }
+
+    // @ 統一設定 Add Watchlist 的 icon 大小(因為打勾與加號的 icon 大小不一)
+    i{
+      width: 1.125rem;
+    }
   }
 
   // * Trailer (預告)
