[修改]結構調整、將components 改成 Movies, Movies-cards, Movies-card。 [完成] Genres 頁面資料的串接

--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -31,7 +31,7 @@ $color: (
   primary: #fff,
   secondary: #000,
   tertiary: red,
-  hover: rgb(171, 148, 214),
+  active: rgb(171, 148, 214),
 );
 
 // padding
