--- a/src/scss/page/_Genres.scss
+++ b/src/scss/page/_Genres.scss
@@ -52,8 +52,12 @@
   &:hover {
     #{$bolck}__icon,
     #{$bolck}__name {
-      color: map-get($color, hover);
+      color: map-get($color, active);
     }
+  }
+
+  &--active{
+    color: map-get($color, active);
   }
 
   &__icon {
