--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,7 +1,6 @@
-@forward "Movies";
 @forward "Header";
 @forward "btns";
 @forward "movie-swiper";
 @forward "DetailCard";
-@forward "WatchCard";
 @forward "GenresSlide";
+@forward "movies-cards";
