--- a/src/scss/components/_movies-cards.scss
+++ b/src/scss/components/_movies-cards.scss
@@ -1,36 +1,45 @@
 @use "../abstracts" as *;
 
-.movies {
-  @include x-spacing;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
+// * 卡片之間的 gap (主要是指 column-gap)
+$gap: 1.5rem;
 
 .movies-cards {
   @include flex($jc: flex-start, $wrap: wrap);
   margin-top: 4rem;
-  gap: 1.5rem;
+  gap: $gap;
+
+  @include sm {
+    gap: 2.5rem;
+  }
 }
 
 .movies-card-link {
   display: inline-block;
-  max-width: calc(16.6% - 20px);
+  // @ calc(100%/每列卡片張數 - (卡片之間有幾個$gap?) / 每列卡片張數)
+  max-width: calc(20% - ($gap*4) / 5);
   flex: 1 0 100%;
 
   @include xl {
-    max-width: calc(20% - 19.2px);
+    max-width: calc(25% - ($gap*3) / 4);
   }
 
   @include lg {
-    max-width: calc(25% - 18px);
+    max-width: calc(33.3% - ($gap*2) / 3);
   }
 
   @include md {
-    max-width: calc(33% - 16px);
+    max-width: calc(50% - ($gap*1) / 2);
   }
 
   @include sm {
-    max-width: calc(50% - 12px);
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 18.75rem;
+    
+    &:not(:first-child){
+      border-top: 1px solid;
+      padding-top: 2.5rem;
+    }
   }
 }
 
@@ -38,10 +47,10 @@
   $block: &;
   position: relative;
   border-radius: map-get($border-radius, base);
-  cursor: pointer;
   overflow: hidden;
   transition-property: transform, box-shadow;
   transition: 200ms ease-in-out;
+  cursor: pointer;
 
   &::before {
     content: "";
@@ -53,6 +62,11 @@
     background-color: rgba(0, 0, 0, 0.45);
     opacity: 0;
     transition: all 300ms ease-in-out;
+
+    @include sm {
+      // 行動裝置不需要此
+      display: none;
+    }
   }
 
   @include hover-query() {
@@ -79,6 +93,10 @@
 
   &__img {
     width: 100%;
+
+    @include sm {
+      border-radius: map-get($border-radius, base);
+    }
   }
 
   &__text {
@@ -92,6 +110,15 @@
     transition: all ease-in-out 300ms;
     visibility: hidden;
     opacity: 0;
+
+    @include sm {
+      position: static;
+      visibility: visible;
+      opacity: 1;
+      padding-left: 0;
+      padding-right: 0;
+      margin-top: 1rem;
+    }
   }
 
   &__title {
@@ -99,10 +126,8 @@
   }
 
   &__info {
-    @include flex();
-  }
-
-  &__release-date {
+    @include flex;
+    margin-top: .5rem;
   }
 
   &__vote {
