--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -31,7 +31,7 @@ $color: (
   primary: #fff,
   secondary: #000,
   tertiary: red,
-  active: rgb(171, 148, 214),
+  active: #546f95,
 );
 
 // padding
