--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,7 +1,7 @@
 @forward "Header";
 @forward "btns";
-@forward "movie-swiper";
+@forward "MovieSwiper";
 @forward "DetailCard";
 @forward "GenresSlide";
-@forward "movies-cards";
+@forward "MoviesCards";
 @forward "skeleton";
