[完成] Search.js 的 load-more 功能

--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -30,8 +30,8 @@ $max-width: (
 $color: (
   primary: #fff,
   secondary: #000,
-  tertiary: red,
-  active: #546f95,
+  tertiary: rgb(213, 108, 80),
+  active: rgb(213, 108, 80),
 );
 
 // padding
