--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -66,7 +66,7 @@
   }
 
   &--red {
-    background-color: map-get($color, tertiary);
+    background-color: red;
     color: map-get($color, primary);
 
     &:hover {
